 [package]
name = "openclaw-hf-sync"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.37", features = ["full"] }
walkdir = "2.5"