[package]
name = "openclaw-hf-sync"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "openclaw-hf-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
md5 = "0.7"
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"